core/css/styles.scss
/* ... */
/* ---- jQuery UI timepicker ---- */
.ui-widget.ui-timepicker {
	margin-top: 10px !important;
	width: auto !important;
	border-radius: var(--border-radius);

	.ui-widget-content {
		border: none !important;
	}

	.ui-state-default,
	.ui-widget-content .ui-state-default,
	.ui-widget-header .ui-state-default {
		border: 1px solid transparent;
		background: inherit;
	}
	.ui-widget-header {
		padding: 7px;
		font-size: 13px;
		border:	none;
		background-color: var(--color-main-background);
		color: var(--color-main-text);

		.ui-timepicker-title {
			line-height: 1;
			font-weight: 300;
		}
	}
	/* AM/PM fix */
	table.ui-timepicker tr .ui-timepicker-hour-cell:first-child {
		margin-left: 30px;
	}
	.ui-timepicker-table {
		th {
			font-weight: normal;
			color: var(--color-text-lighter);
			opacity: .8;
			&.periods {
				padding: 0;
				width: 30px;
				line-height: 30px;
			}
		}
		tr:hover {
			background-color: inherit;
		}
		td {
			&.ui-timepicker-hour-cell a.ui-state-active,
			&.ui-timepicker-minute-cell a.ui-state-active,
			.ui-state-hover,
			.ui-state-focus {
				background-color: var(--color-primary);
				color: var(--color-primary-text);
				font-weight: bold;
			}

			&.ui-timepicker-minutes:not(.ui-state-hover) {
				color: var(--color-text-lighter);
			}

			&.ui-timepicker-hours {
				border-right: 1px solid var(--color-border);
			}
		}
	}
}

/* ---- jQuery UI datepicker & timepicker global rules ---- */
.ui-widget.ui-datepicker .ui-datepicker-calendar,
.ui-widget.ui-timepicker table.ui-timepicker {
	tr {
		display: flex;
		flex-wrap: nowrap;
		justify-content: space-between;
		td {
			flex: 1 1 auto;
			margin: 0;
			padding: 2px;
			height: 26px;
			width: 26px;
			display: flex;
			align-items: center;
			justify-content: center;
			> * {
				border-radius: 50%;
				text-align: center;
				font-weight: normal;
				color: var(--color-main-text);
				display: block;
				line-height: 18px;
				width: 18px;
				height: 18px;
				padding: 3px;
				font-size: .9em;
			}
		}
	}
}

/* ---- DIALOGS ---- */

#oc-dialog-filepicker-content {
	.dirtree {
		width: 92%;
		flex-wrap: wrap;
		div:first-child a {
			background-image: url('../img/places/home.svg?v=1');
			background-repeat: no-repeat;
			background-position: left center;
		}
		span {
			&:not(:last-child) {
				cursor: pointer;
			}
			&:last-child {
				font-weight: bold;
			}
			&:not(:last-child)::after {
				content: '>';
				padding: 3px;
			}
		}
	}
	.filelist-container {
		box-sizing: border-box;
		display: inline-block;
		overflow-y: auto;
		height: 100%;
		/** overflow under the button row */
		width: 100%;
	}
	.emptycontent {
		color: var(--color-text-details);
		text-align: center;
		margin-top: 80px;
		width: 100%;
		display: none;
	}
	.filelist {
		background-color: var(--color-main-background);
		width: 100%;
	}
	#filestable.filelist {
		/* prevent the filepicker to overflow */
		min-width: initial;
		margin-bottom: 50px;
	}
	.filelist {
		td {
			padding: 14px;
			border-bottom: 1px solid var(--color-border);
		}
		tr:last-child td {
			border-bottom: none;
		}
		.filename {
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
			background-size: 32px;
			background-repeat: no-repeat;
			padding-left: 51px;
			background-position: 7px 7px;
			cursor: pointer;
		}
		.filesize, .date {
			width: 80px;
		}
		.filesize {
			text-align: right;
		}
	}
	.filepicker_element_selected {
		background-color: lightblue;
	}
}

.ui-dialog {
	position: fixed !important;
}

span.ui-icon {
	float: left;
	margin: 3px 7px 30px 0;
}

/* ---- CONTACTS MENU ---- */

#contactsmenu {
	.menutoggle {
		background-size: 16px 16px;
		padding: 14px;
		cursor: pointer;

		&:hover,
		&:focus,
		&:active {
			opacity: 1 !important;
		}
	}
}

#contactsmenu > .menu {
	/* show ~4.5 entries */
	height: 278px;
	width: 350px;
	max-width: 90%;
	right: 13px;

	&::after {
		right: 61px;
	}

	.emptycontent {
		margin-top: 5vh !important;
		margin-bottom: 2vh;
		.icon-loading,
		.icon-search {
			display: inline-block;
		}
	}

	.content {
		max-height: calc(100% - #{$header-height});
		height: 100%;
		overflow-y: auto;

		.footer {
			text-align: center;

			a {
				display: block;
				width: 100%;
				padding: 12px 0;
				opacity: .5;
			}
		}
	}

	.contact {
		display: flex;
		position: relative;
		align-items: center;
		padding: 3px 3px 3px 10px;
		border-bottom: 1px solid var(--color-border);

		:last-of-type {
			border-bottom: none;
		}

		.avatar {
			height: 32px;
			width: 32px;
			display: inline-block;
		}

		.body {
			flex-grow: 1;
			padding-left: 8px;

			div {
				position: relative;
				width: 100%;
			}

			.full-name, .last-message {
				/* TODO: don't use fixed width */
				max-width: 204px;
				overflow: hidden;
				white-space: nowrap;
				text-overflow: ellipsis;
			}
			.last-message {
				opacity: .5;
			}
		}

		.top-action, .second-action, .other-actions {
			width: 16px;
			height: 16px;
			padding: 14px;
			opacity: .5;
			cursor: pointer;

			:hover {
				opacity: 1;
			}
		}

		/* actions menu */
		.menu {
			top: 47px;
			margin-right: 13px;
		}
		.popovermenu::after {
			right: 2px;
		}
	}
}


#contactsmenu-search {
	width: calc(100% - 16px);
	margin: 8px;
	height: 34px;
}

/* ---- TOOLTIPS ---- */

.extra-data {
	padding-right: 5px !important;
}

/* ---- TAGS ---- */

#tagsdialog {
	.content {
		width: 100%;
		height: 280px;
	}
	.scrollarea {
		overflow: auto;
		border: 1px solid var(--color-background-darker);
		width: 100%;
		height: 240px;
	}
	.bottombuttons {
		width: 100%;
		height: 30px;
		* {
			float: left;
		}
	}
	.taglist li {
		background: var(--color-background-dark);
		padding: .3em .8em;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		-webkit-transition: background-color 500ms;
		transition: background-color 500ms;
		&:hover, &:active {
			background: var(--color-background-darker);
		}
	}
	.addinput {
		width: 90%;
		clear: both;
	}
}
/* ... */

